--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header class="header">
-        <div class="container header-container">
+        <div class="container e">
             <nav class="header-navigation">
                 <a class="header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
                 <ul class="header-menu-list">
