--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header class="header">
-        <div class="container e">
+        <div class="container header-container">
             <nav class="header-navigation">
                 <a class="header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
                 <ul class="header-menu-list">
@@ -51,7 +51,7 @@
 </div>
 </section>
 
-<section class="feature">
+<section class="feature section">
     <div class="container">
         <h2 class="visually-hidden">list</h2>
             <ul class="feature-list">
@@ -76,23 +76,23 @@
     </div>
 </section>
 
-<section class="team">
+<section class="team section">
     <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
-            <li class="team-item"><img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
+            <li class="team-item"><img class="team-image" src="./images/mark.jpg" alt="Mark Guerrero" width="264">
     <h3 class="team-subtitle">Mark Guerrero</h3>
     <p class="team-text">Product Designer</p>
     </li>
-            <li class="team-item"><img src="./images/tom.jpg" alt="Tom Ford" width="264">
+            <li class="team-item"><img class="team-image" src="./images/tom.jpg" alt="Tom Ford" width="264">
     <h3 class="team-subtitle">Tom Ford</h3>
     <p class="team-text">Frontend Developer</p>
     </li>
-            <li class="team-item"><img src="./images/camila.jpg" alt="Camila Garcia" width="264">
+            <li class="team-item"><img class="team-image" src="./images/camila.jpg" alt="Camila Garcia" width="264">
     <h3 class="team-subtitle">Camila Garcia</h3>
     <p class="team-text">Marketing</p>
     </li>
-            <li class="team-item"><img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
+            <li class="team-item"><img class="team-image" src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
     <h3 class="team-subtitle">Daniel Wilson</h3>
     <p class="team-text">UI Designer</p>
     </li>
@@ -100,37 +100,37 @@
     </div>
     </section>
 
-<section class="portfolio">
+<section class="portfolio section">
     <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-item">
-                <img src="./images/banking.jpg" alt="App screens" width="360">
+                <img class="portfolio-image" src="./images/banking.jpg" alt="App screens" width="360">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
             </li>
             <li class="portfolio-item">
-                <img src="./images/payment.jpg" alt="Phone payment" width="360">
+                <img class="portfolio-image" src="./images/payment.jpg" alt="Phone payment" width="360">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
             <li class="portfolio-item">
-                <img src="./images/meditation.jpg" alt="Laptop and phone" width="360">
+                <img class="portfolio-image" src="./images/meditation.jpg" alt="Laptop and phone" width="360">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
             </li>
             <li class="portfolio-item">
-                <img src="./images/taxi.jpg" alt="Drive car" width="360">
+                <img class="portfolio-image" src="./images/taxi.jpg" alt="Drive car" width="360">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
             <li class="portfolio-item">
-                <img src="./images/screen.jpg" alt="Phone screens" width="360">
+                <img class="portfolio-image" src="./images/screen.jpg" alt="Phone screens" width="360">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
             </li>
             <li class="portfolio-item">
-                <img src="./images/courses.jpg" alt="Girl with phone" width="360">
+                <img class="portfolio-image" src="./images/courses.jpg" alt="Girl with phone" width="360">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
