--- a/index.html
+++ b/index.html
@@ -81,20 +81,28 @@
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
             <li class="team-item"><img class="team-image" src="./images/mark.jpg" alt="Mark Guerrero" width="264">
-    <h3 class="team-subtitle">Mark Guerrero</h3>
-    <p class="team-text">Product Designer</p>
+    <div class="team-container">
+        <h3 class="team-subtitle">Mark Guerrero</h3>
+        <p class="team-text">Product Designer</p>
+    </div>
     </li>
             <li class="team-item"><img class="team-image" src="./images/tom.jpg" alt="Tom Ford" width="264">
-    <h3 class="team-subtitle">Tom Ford</h3>
-    <p class="team-text">Frontend Developer</p>
+    <div class="team-container">
+        <h3 class="team-subtitle">Tom Ford</h3>
+        <p class="team-text">Frontend Developer</p>
+    </div>
     </li>
             <li class="team-item"><img class="team-image" src="./images/camila.jpg" alt="Camila Garcia" width="264">
-    <h3 class="team-subtitle">Camila Garcia</h3>
-    <p class="team-text">Marketing</p>
+    <div class="team-container">
+        <h3 class="team-subtitle">Camila Garcia</h3>
+        <p class="team-text">Marketing</p>
+    </div>
     </li>
             <li class="team-item"><img class="team-image" src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
-    <h3 class="team-subtitle">Daniel Wilson</h3>
-    <p class="team-text">UI Designer</p>
+    <div class="team-container">
+        <h3 class="team-subtitle">Daniel Wilson</h3>
+        <p class="team-text">UI Designer</p>
+    </div>
     </li>
         </ul>
     </div>
@@ -106,33 +114,45 @@
         <ul class="portfolio-list">
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/banking.jpg" alt="App screens" width="360">
-                <h3 class="portfolio-subtitle">Banking App</h3>
-                <p class="portfolio-text">App</p>
+                <div class="portfolio-container">
+                    <h3 class="portfolio-subtitle">Banking App</h3>
+                    <p class="portfolio-text">App</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/payment.jpg" alt="Phone payment" width="360">
-                <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                <p class="portfolio-text">Marketing</p>
+                <div class="portfolio-container">
+                    <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/meditation.jpg" alt="Laptop and phone" width="360">
-                <h3 class="portfolio-subtitle">Meditation App</h3>
-                <p class="portfolio-text">App</p>
+                <div class="portfolio-container">
+                    <h3 class="portfolio-subtitle">Meditation App</h3>
+                    <p class="portfolio-text">App</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/taxi.jpg" alt="Drive car" width="360">
-                <h3 class="portfolio-subtitle">Taxi Service</h3>
-                <p class="portfolio-text">Marketing</p>
+                <div class="portfolio-container">
+                    <h3 class="portfolio-subtitle">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/screen.jpg" alt="Phone screens" width="360">
-                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                <p class="portfolio-text">Design</p>
+                <div class="portfolio-container">
+                    <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/courses.jpg" alt="Girl with phone" width="360">
-                <h3 class="portfolio-subtitle">Online Courses</h3>
-                <p class="portfolio-text">Marketing</p>
+                <div class="portfolio-container">
+                    <h3 class="portfolio-subtitle">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
+                </div>
             </li>
         </ul>
     </div>
