--- a/index.html
+++ b/index.html
@@ -114,42 +114,42 @@
         <ul class="portfolio-list">
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/banking.jpg" alt="App screens" width="360">
-                <div class="">
+                <div class="portfolio-container">
                     <h3 class="portfolio-subtitle">Banking App</h3>
                     <p class="portfolio-text">App</p>
                 </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/payment.jpg" alt="Phone payment" width="360">
-                <div class="">
+                <div class="portfolio-container">
                     <h3 class="portfolio-subtitle">Cashless Payment</h3>
                     <p class="portfolio-text">Marketing</p>
                 </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/meditation.jpg" alt="Laptop and phone" width="360">
-                <div class="">
+                <div class="portfolio-container">
                     <h3 class="portfolio-subtitle">Meditation App</h3>
                     <p class="portfolio-text">App</p>
                 </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/taxi.jpg" alt="Drive car" width="360">
-                <div class="">
+                <div class="portfolio-container">
                     <h3 class="portfolio-subtitle">Taxi Service</h3>
                     <p class="portfolio-text">Marketing</p>
                 </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/screen.jpg" alt="Phone screens" width="360">
-                <div class="">
+                <div class="portfolio-container">
                     <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                     <p class="portfolio-text">Design</p>
                 </div>
             </li>
             <li class="portfolio-item">
                 <img class="portfolio-image" src="./images/courses.jpg" alt="Girl with phone" width="360">
-                <div class="">
+                <div class="portfolio-container">
                     <h3 class="portfolio-subtitle">Online Courses</h3>
                     <p class="portfolio-text">Marketing</p>
                 </div>
